crates/math-core/tests/snapshots/error_test__hline_in_wrong_position.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin{array}{cc} 1 & \\hline 2 \\end{array}"
---
Error: Found "\hline", which may only appear directly after a `\\` or at the beginning of an array.
   ╭─[ <input>:1:23 ]
   │
 1 │ \begin{array}{cc} 1 & \hline 2 \end{array}
   │                       ───┬──  
   │                          ╰──── cannot be used here
───╯
